--- a/assets/scss/utils/_animations.scss
+++ b/assets/scss/utils/_animations.scss
@@ -90,11 +90,11 @@
 
 @keyframes swipeLeft {
     0% {
-        transform: translateX(100px);
+        transform: translateY(100px);
         opacity: 0;
    }
     100% {
-        transform: translateX(0);
+        transform: translateY(0);
         opacity: 1;
    }
 }
