--- a/assets/css/home2.css
+++ b/assets/css/home2.css
@@ -660,6 +660,15 @@ ul{
     width: 100%;
     height: 500px;
   }
+
+  .links{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding-bottom: 0px;
+    margin-top: 25px;
+}
 }
 /****** Loader ***********/
 .loader {
@@ -725,7 +734,7 @@ ul{
 }
 /****** animations affichage restaurant sur la homepage ***********/
 .card {
-  animation: swipeLeft 1s ease-out forwards;
+  animation: swipeUp 1s ease-out forwards;
   opacity: 0;
 }
 
@@ -745,13 +754,13 @@ ul{
   animation-delay: 1s;
 }
 
-@keyframes swipeLeft {
+@keyframes swipeUp {
   0% {
-    transform: translateX(100px);
+    transform: translateY(100px);
     opacity: 0;
   }
   100% {
-    transform: translateX(0);
+    transform: translateY(0);
     opacity: 1;
   }
 }
