--- a/assets/css/home2.css
+++ b/assets/css/home2.css
@@ -18,6 +18,7 @@ html {
  */
 body {
   margin: 0;
+  width: 100%;
 }
 
 /**
@@ -401,7 +402,6 @@ template {
 
 .list-restaurant .container {
   width: 100%;
-  max-width: 1440px;
   margin: 0 auto;
 }
 
@@ -525,6 +525,7 @@ ul{
 }
 /****** home page ***********/
 /****** header ***********/
+
 .nav-container {
   box-sizing: border-box;
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1490196078);
@@ -532,6 +533,7 @@ ul{
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  
 }
 
 .logo {
@@ -631,6 +633,7 @@ ul{
   /* ... */
   .nav-container {
     height: 96px;
+    width: 100%;
   }
   .logo {
     width: 200px;
@@ -672,8 +675,8 @@ ul{
 }
 /****** Loader ***********/
 .loader {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   position: fixed;
   top: 0;
   left: 0;
@@ -932,8 +935,6 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
-  width: 100%;
-  max-width: 100%;
 }
 
 .fonctionnement {
@@ -945,7 +946,7 @@ html, body {
 
 .fonctionnement-title {
   font-size: 24px;
-  width: calc(100% - 25px);
+
   align-items: flex-start;
   margin: 45px 0px 25px 20px;
 }
@@ -1033,12 +1034,15 @@ html, body {
   margin-bottom: 20px;
   margin-left: 25px;
   margin-top: 0px;
-  width: calc(100% - 20px);
 }
 
 /* Small devices (phones, less than 1020px) */
 @media all and (min-width: 1019.98px) {
   /* ... */
+  html{
+    max-width: 100%;
+  }
+
   .fonctionnement {
     height: 230px;
   }
