--- a/assets/css/home2.css
+++ b/assets/css/home2.css
@@ -9,7 +9,13 @@
 html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
+  min-width: 375px;
+  overflow-x: auto; 
 }
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
 
 /* Sections
    ========================================================================== */
@@ -17,8 +23,11 @@ html {
  * Remove the margin in all browsers.
  */
 body {
-  margin: 0;
+  margin: 0 auto;
   width: 100%;
+  min-width: 375px;
+  overflow-x: auto; 
+
 }
 
 /**
@@ -403,6 +412,7 @@ template {
 .list-restaurant .container {
   width: 100%;
   margin: 0 auto;
+  min-width: 375px;
 }
 
 .card-subtitle {
@@ -533,6 +543,7 @@ ul{
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  min-width: 375px;
   
 }
 
@@ -544,10 +555,12 @@ ul{
 .header-container {
   width: 100%;
   height: 100%;
+  min-width: 375px;
 }
 
 .menu-container {
   width: 100%;
+  min-width: 375px;
 }
 
 .localize-me {
@@ -634,6 +647,7 @@ ul{
   .nav-container {
     height: 96px;
     width: 100%;
+    min-width: 375px;
   }
   .logo {
     width: 200px;
@@ -935,6 +949,7 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
+  min-width: 375px;
 }
 
 .fonctionnement {
