--- a/assets/css/home2.css
+++ b/assets/css/home2.css
@@ -6,28 +6,18 @@
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
-html {
-  line-height: 1.15; /* 1 */
-  -webkit-text-size-adjust: 100%; /* 2 */
-  min-width: 375px;
-  overflow-x: auto; 
-}
-*, *::before, *::after {
-  box-sizing: border-box;
-}
 
 
-/* Sections
-   ========================================================================== */
-/**
- * Remove the margin in all browsers.
- */
-body {
-  margin: 0 auto;
+
+html, body {
+  margin:0;
+  margin-bottom: -16px;
+  padding:0;
+
+  font-family: 'Roboto', sans-serif;
+
   width: 100%;
-  min-width: 375px;
-  overflow-x: auto; 
-
+  max-width: 100%;
 }
 
 /**
@@ -944,13 +934,6 @@ input[type=checkbox]:checked ~ label .heart-clip::before {
   opacity: 1;
 }
 
-html, body {
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  font-family: "Roboto", sans-serif;
-  min-width: 375px;
-}
 
 .fonctionnement {
   display: flex;
