--- a/assets/css/restaurant.css
+++ b/assets/css/restaurant.css
@@ -899,17 +899,15 @@ input[type=checkbox]:checked ~ label .heart-clip::before {
   }
 }
 /****** animations green check/ page restaurant ***********/
-.menu-btn:hover .price-check,
-.menu-btn:hover + .plat-prix + .green-check {
+.menu-btn:hover .price-check {
     transform: translateX(-59px);
     transition: transform 0.4s ease-in-out,
-                width 0.4s ease-in-out,
                 opacity 0.4s ease-in-out;
     opacity: 1;
 }
 .menu-btn:hover .plat-description {
   width: 200px;
-}
+} 
 
 /*** animations boutons commander / page restaurant ***/
 .btn-order:hover {
